# SFMLproject

./: .gitignore  CMakeLists.txt
src/: beauty.cpp  bruh.cpp  main.cpp
